--- a/requirements.txt
+++ b/requirements.txt
@@ -12,12 +12,14 @@ Flask-Mail==0.9.1
 Flask-Migrate==2.5.3
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
+gunicorn==20.0.4
 idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
 jwt==1.0.0
 Mako==1.1.3
 MarkupSafe==1.1.1
+mysqlclient==2.0.1
 psycopg2==2.8.6
 pycparser==2.20
 python-dateutil==2.8.1
